Updated header on each page  Changes to be committed: 	modified:   Scouts.html 	modified:   contact.html 	modified:   cubs.html 	modified:   explorers.html 	modified:   generic.html 	modified:   index.html 	modified:   privacy.html 	modified:   terms.html

--- a/generic.html
+++ b/generic.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
+
 <html>
 	<head>
-		<title>Generic - Alpha by HTML5 UP</title>
+		<title>Cubs - 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,33 +11,31 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+<!-- Header -->
+			
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+        <span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
+								<a href="#">Sections</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+									<li><a href="beavers.html">Beavers</a></li>									
+									<li><a href="cubs.html">Cubs</a></li>
+									<li><a href="scouts.html">Scouts</a></li>
+									<li><a href="explorers.html">Explorers</a></li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="parents.html">For Parents</a></li>
+							<li><a href="leaders.html">For Leaders</a></li>
+							<li><a href="contact.html" class="button">Contact Us</a></li>
+
 						</ul>
 					</nav>
 				</header>
+
+				<header>
 
 			<!-- Main -->
 				<section id="main" class="container">
