--- a/cubs.html
+++ b/cubs.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>Cubs - 52nd Reading Scout Group</title>
+		<title>Cubs | 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
