--- a/terms.html
+++ b/terms.html
@@ -3,39 +3,39 @@
 
 <html>
 	<head>
-		<title>Terms and Conditions - 52nd Reading Scout Group</title>
+		<title>Terms and Conditions | 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
-
-			<!-- Header -->
+			
+<!-- Header -->
 			
 				<header id="header">
-					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
+        <span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">More</a>
+								<a href="#">Sections</a>
 								<ul>
 									<li><a href="beavers.html">Beavers</a></li>									
 									<li><a href="cubs.html">Cubs</a></li>
 									<li><a href="scouts.html">Scouts</a></li>
 									<li><a href="explorers.html">Explorers</a></li>
-									<li><a href="parents.html">For Parents</a></li>
-									<li><a href="leaders.html">For Leaders</a></li>
-									<li>
-										
 								</ul>
 							</li>
+							<li><a href="parents.html">For Parents</a></li>
+							<li><a href="leaders.html">For Leaders</a></li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
 
 						</ul>
 					</nav>
 				</header>
+
+				<header>
 
 			<!-- Main -->
 				<section id="main" class="container">
