Updated header and footer on the following pages: 	   Scouts.html 	   contact.html 	   explorers.html 	   generic.html 	   index.html 	   terms.html

--- a/explorers.html
+++ b/explorers.html
@@ -10,10 +10,6 @@
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
-
-			<!-- Header -->
-			
-	<!-- Header -->
 			
 <!-- Header -->
 			
@@ -65,19 +61,13 @@
 				</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
+					 <p style="color:#FFFFFF";> Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
+				<ul class="copyright">
+					<li>&copy; 52nd Reading Scout Group 2023. All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
+				</ul>
+			</footer>
 
 		</div>
 
