Changes to be committed: 	modified:   assets/css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<a href="#">Sections</a>
 								<ul>
 									<li><a href="beavers.html">Beavers</a></li>									
-									<li><a href="cubs.html">Cubs</a></li>
+									<li><a href="cubs">Cubs</a></li>
 									<li><a href="scouts.html">Scouts</a></li>
 									<li><a href="explorers.html">Explorers</a></li>
 								</ul>
