Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 								<a href="#">Sections</a>
 								<ul>
 									<li><a href="beavers.html">Beavers</a></li>									
-									<li><a href="cubs">Cubs</a></li>
+									<li><a href="cubs.html">Cubs</a></li>
 									<li><a href="scouts.html">Scouts</a></li>
 									<li><a href="explorers.html">Explorers</a></li>
 								</ul>
 							</li>
 							<li><a href="parents.html">For Parents</a></li>
 							<li><a href="leaders.html">For Leaders</a></li>
-							<li><a href="contact.html" class="button">Contact Us</a></li>
+							<li><a href="contact" class="button">Contact Us</a></li>
 
 						</ul>
 					</nav>
