--- a/cubs.html
+++ b/cubs.html
@@ -17,29 +17,31 @@
 			
 <!-- Header -->
 			
-				<header id="header">
-        <span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Sections</a>
-								<ul>
-									<li><a href="beavers.html">Beavers</a></li>									
-									<li><a href="cubs.html">Cubs</a></li>
-									<li><a href="scouts.html">Scouts</a></li>
-									<li><a href="explorers.html">Explorers</a></li>
-								</ul>
-							</li>
-							<li><a href="parents.html">For Parents</a></li>
-							<li><a href="leaders.html">For Leaders</a></li>
-							<li><a href="contact.html" class="button">Contact Us</a></li>
+<header id="header">
+	<span class="image">
+		<a href="index">
+			<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
+				<nav id="nav">
+					<ul>
+						<li><a href="index">Home</a></li>
+						<li>
+							<a href="#">Sections</a>
+							<ul>
+								<li><a href="beavers">Beavers</a></li>									
+								<li><a href="cubs">Cubs</a></li>
+								<li><a href="scouts">Scouts</a></li>
+								<li><a href="explorers">Explorers</a></li>
+							</ul>
+						</li>
+						<li><a href="parents">For Parents</a></li>
+						<li><a href="leaders">For Leaders</a></li>
+						<li><a href="contact" class="button">Contact Us</a></li>
 
-						</ul>
-					</nav>
-				</header>
+					</ul>
+				</nav>
+			</header>
 
-				<header>
+			<header>
 
 
 <style>
