--- a/elements.html
+++ b/elements.html
@@ -14,33 +14,33 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+<!-- Header -->
+			
+<header id="header">
+	<span class="image">
+		<a href="index">
+			<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
+				<nav id="nav">
+					<ul>
+						<li><a href="index">Home</a></li>
+						<li>
+							<a href="#">Sections</a>
+							<ul>
+								<li><a href="beavers">Beavers</a></li>									
+								<li><a href="cubs">Cubs</a></li>
+								<li><a href="scouts">Scouts</a></li>
+								<li><a href="explorers">Explorers</a></li>
+							</ul>
+						</li>
+						<li><a href="parents">For Parents</a></li>
+						<li><a href="leaders">For Leaders</a></li>
+						<li><a href="contact" class="button">Contact Us</a></li>
+
+					</ul>
+				</nav>
+			</header>
+
+			<header>
 
 			<!-- Main -->
 				<section id="main" class="container">
