--- a/index.html
+++ b/index.html
@@ -11,34 +11,35 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 			
+
 <!-- Header -->
 			
-				<header id="header">
-        <span class="image">
-			<a href="index.html">
-				<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Sections</a>
-								<ul>
-									<li><a href="beavers.html">Beavers</a></li>									
-									<li><a href="cubs.html">Cubs</a></li>
-									<li><a href="scouts.html">Scouts</a></li>
-									<li><a href="explorers.html">Explorers</a></li>
-								</ul>
-							</li>
-							<li><a href="parents.html">For Parents</a></li>
-							<li><a href="leaders.html">For Leaders</a></li>
-							<li><a href="contact" class="button">Contact Us</a></li>
+<header id="header">
+	<span class="image">
+		<a href="index">
+			<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
+				<nav id="nav">
+					<ul>
+						<li><a href="index">Home</a></li>
+						<li>
+							<a href="#">Sections</a>
+							<ul>
+								<li><a href="beavers">Beavers</a></li>									
+								<li><a href="cubs">Cubs</a></li>
+								<li><a href="scouts">Scouts</a></li>
+								<li><a href="explorers">Explorers</a></li>
+							</ul>
+						</li>
+						<li><a href="parents">For Parents</a></li>
+						<li><a href="leaders">For Leaders</a></li>
+						<li><a href="contact" class="button">Contact Us</a></li>
 
-						</ul>
-					</nav>
-				</header>
+					</ul>
+				</nav>
+			</header>
 
-				<header>
-
+			<header>
+				
 			<!-- Banner -->
 				<section id="banner">
 					<div class="box alt">
