--- a/contact.html
+++ b/contact.html
@@ -11,33 +11,33 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 			
-<!-- Header -->
-			
-<header id="header">
-	<span class="image">
-		<a href="index">
-			<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
-				<nav id="nav">
-					<ul>
-						<li><a href="index">Home</a></li>
-						<li>
-							<a href="#">Sections</a>
-							<ul>
-								<li><a href="beavers">Beavers</a></li>									
-								<li><a href="cubs">Cubs</a></li>
-								<li><a href="scouts">Scouts</a></li>
-								<li><a href="explorers">Explorers</a></li>
-							</ul>
-						</li>
-						<li><a href="parents">For Parents</a></li>
-						<li><a href="leaders">For Leaders</a></li>
-						<li><a href="contact" class="button">Contact Us</a></li>
+			<!-- Header -->
 
-					</ul>
-				</nav>
-			</header>
-
-			<header>
+			<header id="header">
+				<span class="image">
+					<a href="index">
+						<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> ></a>
+							<nav id="nav">
+								<ul>
+									<li><a href="index">Home</a></li>
+									<li>
+										<a href="#">Sections</a>
+										<ul>
+											<li><a href="beavers">Beavers</a></li>									
+											<li><a href="cubs">Cubs</a></li>
+											<li><a href="scouts">Scouts</a></li>
+											<li><a href="explorers">Explorers</a></li>
+										</ul>
+									</li>
+									<li><a href="parents">For Parents</a></li>
+									<li><a href="leaders">For Leaders</a></li>
+									<li><a href="contact" class="button">Contact Us</a></li>
+		   
+								</ul>
+							</nav>
+						</header>
+		   
+						<header>
 
 				<header>
 
