--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 			<header id="header">
 				<span class="image">
-					<a href="index">
-						<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> ></a>
+					<a href="index"><img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
 							<nav id="nav">
 								<ul>
 									<li><a href="index">Home</a></li>
