--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 			
 
 			<!-- Header -->
-
+			
 			<header id="header">
-				<span class="image">
-					<a href="index"><img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> >
+				<span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 							<nav id="nav">
 								<ul>
-									<li><a href="index">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Sections</a>
 										<ul>
@@ -32,11 +31,9 @@
 									<li><a href="parents">For Parents</a></li>
 									<li><a href="leaders">For Leaders</a></li>
 									<li><a href="contact" class="button">Contact Us</a></li>
-		   
 								</ul>
 							</nav>
 						</header>
-		   
 						<header>
 
 			<!-- Banner -->
@@ -102,13 +99,13 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
-					 <p style="color:#FFFFFF";> Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
+					 <p style="color:#FFFFFF";> Website <a href="terms">Terms and Conditions</a> and <a href="privacy">Privacy Policy</a></p>
 				<ul class="copyright">
 					<li>&copy; 52nd Reading Scout Group 2023. All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 				</ul>
 			</footer>
 
-		</div>
+	</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
