--- a/privacy.html
+++ b/privacy.html
@@ -12,14 +12,12 @@
 		<div id="page-wrapper">
 			
 			<!-- Header -->
-
+			
 			<header id="header">
-				<span class="image">
-					<a href="index">
-						<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> ></a>
+				<span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 							<nav id="nav">
 								<ul>
-									<li><a href="index">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Sections</a>
 										<ul>
@@ -32,14 +30,10 @@
 									<li><a href="parents">For Parents</a></li>
 									<li><a href="leaders">For Leaders</a></li>
 									<li><a href="contact" class="button">Contact Us</a></li>
-		   
 								</ul>
 							</nav>
 						</header>
-		   
 						<header>
-
-				<header>
 
 			<!-- Main -->
 				<section id="main" class="container">
