--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 						<header>
 							
 			<!-- Banner -->
-				<section id="banner">
-					<img src="images/hero-pic-1440x885-2.jpg" alt="Cub Scouts" style="width:auto;height:1000px" />
+					<img src="images/hero-pic-1440x885-2.jpg" alt="Cub Scouts" style="width:auto;height:auto" />
 
 					<div class="box alt">
 						<h3>52nd Reading Scout Group</h3>
@@ -47,7 +46,7 @@
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
 					</ul>
-				</section>
+
 
 			<!-- Main -->
 				<section id="main" class="container">
