--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Home/a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Sections</a>
 										<ul>
@@ -87,6 +87,7 @@
 						<a href="https://www.scouts.org.uk/volunteers/staying-safe-and-safeguarding/reporting-a-concern-to-safeguarding/"> 
 						Wherever we go and whatever we do, we put young people’s safety and wellbeing first.</a>
 						<a> </a>
+						<br></br>
 						<a href="https://www.scouts.org.uk/information-for-parents/stay-safe"> Here's How</a>
 						
 					    <br></br>
