--- a/cubs.html
+++ b/cubs.html
@@ -116,15 +116,14 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 						</div>
 					</div>
 				</section>
-
+				
 			<!-- Footer -->
-				<footer id="footer">
-					<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
-     					<p style="color:#FFFFFF";> Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
-					<ul class="copyright">
-						<li>&copy; 52nd Reading Scout Group 2023. All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
+				<ul class="copyright">
+					<li>&copy; 52nd Reading Scout Group 2023. All rights reserved.</li><li> <a href="terms">Terms and Conditions</a> and <a href="privacy">Privacy Policy</a></a></li>
+				</ul>
+			</footer>
 
 		</div>
 
