--- a/elements.html
+++ b/elements.html
@@ -19,8 +19,8 @@
 			<header id="header">
 				<span class="image">
 					<a href="index">
-						<img src="images\52ndscouts.png" alt="Group Scout Logo" style="width:auto;height:80px"/> ></a>
-							<nav id="nav">
+						<span class="image"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
+						<nav id="nav">
 								<ul>
 									<li><a href="index">Home</a></li>
 									<li>
