--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<!-- Header -->
 			
 			<header id="header">
-				<span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
+				<span class="image left fit"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 							<nav id="nav">
 								<ul>
 									<li><a href="index.html">Home</a></li>
