--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<!-- Header -->
 			
 			<header id="header">
-				<span class="ex1"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" style="width:auto;height:80px"/>
+				<span class="ex1"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 							<nav id="nav">
 								<ul>
 									<li><a href="index.html">Home</a></li>
@@ -33,7 +33,6 @@
 									<li><a href="contact" class="button">Contact Us</a></li>
 								</ul>
 							</nav>
-							</span>
 						</header>
 						<header>
 							
