--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 											<li><a href="explorers">Explorers</a></li>
 										</ul>
 									</li>
-									<li><a href="parents">For Parents</a></li>
-									<li><a href="leaders">For Leaders</a></li>
+									<li><a href="parents">Info for Parents</a></li>
+									<li><a href="leaders">Info for Volunteers</a></li>
 									<li><a href="contact" class="button">Contact Us</a></li>
 								</ul>
 							</nav>
