--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>52nd Reading Scouts/title>
+	<title>52nd Reading Scouts </title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
