--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <!-- logo -->
 					<span class="header img"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
  							<nav id="nav">
-							</div>							<nav id="nav">
+							</div>							
+							<nav id="nav">
 								<ul>
 									<li><a href="index.html">Home</a></li>
 									<li>
