Changes to be committed: 	renamed:    LICENSE -> pages/LICENSE 	renamed:    README.md -> pages/README.md 	renamed:    Scouts.html -> pages/Scouts.html 	renamed:    contact.html -> pages/contact.html 	renamed:    cubs.html -> pages/cubs.html 	renamed:    elements.html -> pages/elements.html 	renamed:    explorers.html -> pages/explorers.html 	renamed:    favicon.png -> pages/favicon.png 	renamed:    generic.html -> pages/generic.html 	renamed:    index.html -> pages/index.html 	renamed:    privacy.html -> pages/privacy.html 	renamed:    terms.html -> pages/terms.html 	renamed:    test.html -> pages/test.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,15 +21,15 @@
 									<li>
 										<a href="#">Sections</a>
 										<ul>
-											<li><a href="beavers">Beavers</a></li>									
-											<li><a href="cubs">Cubs</a></li>
-											<li><a href="scouts">Scouts</a></li>
-											<li><a href="explorers">Explorers</a></li>
+											<li><a href="pages\beavers">Beavers</a></li>									
+											<li><a href="pages\cubs">Cubs</a></li>
+											<li><a href="pages\scouts">Scouts</a></li>
+											<li><a href="pages\explorers">Explorers</a></li>
 										</ul>
 									</li>
-									<li><a href="parents">For Parents</a></li>
-									<li><a href="leaders">For Leaders</a></li>
-									<li><a href="contact" class="button">Contact Us</a></li>
+									<li><a href="pages\parents">For Parents</a></li>
+									<li><a href="pages\leaders">For Leaders</a></li>
+									<li><a href="pages\contact" class="button">Contact Us</a></li>
 								</ul>
 							</nav>
 						</header>
